test/sema/negative/movesema/closure_move.impala
fn f() -> () {
    let foo =
        |x: ~int| -> int
            *x;
    
    let a = ~6;
    let b = foo(a);
    let c = a;
}
